--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 h1 {
   color: blue;
-  font-family: 'Cabin', sans-serif;
   margin: 20px;
   padding-bottom: 10px;
   font-size: 32px;
@@ -9,10 +8,51 @@ h1 {
 p {
   color: darkgreen;
   font-family: 'Old Standard TT', serif;
-  font-size: 20px;
+  font-size: 30px;
   margin-top: 15px;
 }
 
+p.first {
+  padding-top: 80px;
+}
+
 .center {
+  padding-top: 100px;
   text-align: center;
 }
+
+div .top-container {
+  height: 1000px;
+  width: 100%;
+}
+
+p.scroll_tip {
+  font-family: 'Cabin', sans-serif;
+  color: white;
+  margin: 0 auto;
+  width: 500px;
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  margin-left: -120px;
+}
+
+.story p:first-of-type:first-letter {
+  color: #903;
+  font-size: 100px;
+  line-height: 1px;
+  margin-right: -1px;
+}
+
+#Scene{
+  position: fixed;
+  width: 100%;
+  height: 700px;
+  margin-top: -350px;
+  top: 50%;
+  }
+
+#bg1{
+  background: url('/images/flowershop.jpeg');
+  width: 3528px;
+  }
