--- a/practice.css
+++ b/practice.css
@@ -1,49 +1,33 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:100);
-
-body::-webkit-scrollbar { display:none; }
-
-body {
-  background:#34aadc;
-  font-family:'HelveticaNeue-Light', Roboto;
-  color:#fff;
-}
-
-.content {
-  position:fixed;
-  left:50%;
-  margin-left:-250px;
-  top:50px;
-  width:500px;
-}
-
-.intro {
-  width:100%;
-  text-align:center;
-  font-size:40px;
-  margin:0px 0 20px;
-}
-
-.text {
-  font-size:22px;
-  padding-left:2%;
-  height:30px;
-    white-space: nowrap;
+/* CSS */
+.hsContainer {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
+    position: relative;
+    opacity: 0;
+}
+.hsContent {
+    max-width: 450px;
+    margin: -150px auto 0 auto;
+    display: table-cell;
+    vertical-align: middle;
+    color: #ebebeb;
+    padding: 0 8%;
+    text-align: center
+}
+.bcg {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
 }
 
-#bitcoin {
-  width:30px;
+h2{
+  color: white;
 }
-
-.credit {
-  margin-top:14px;
-  font-size:14px;
-  font-style:italic;
-}
-
-.arrow {
-  text-align:center;
-  margin-top:80px;
-  font-size:46px;
-  backface-visiblilty:hidden;
-}
+/* Slide 1 */
+#slide-1 .bcg {background-image:url('./images/bwsky.jpeg')}
