--- a/oldstyles.css
+++ b/oldstyles.css
@@ -100,6 +100,11 @@ p.scroll_tip {
 /*contact icons*/
 .contact-icons {
   margin-top: 50px;
+  padding-left: 5px;
+}
+
+.contacticon {
+  padding-left: 10px;
 }
 
 @media only screen and (min-width: 767px) { 
